--- a/libsoundpoolcompat/build.gradle
+++ b/libsoundpoolcompat/build.gradle
@@ -1,6 +1,31 @@
 import org.apache.tools.ant.taskdefs.condition.Os
-
 apply plugin: 'com.android.library'
+
+
+ext {
+    bintrayRepo = 'maven'
+    bintrayName = 'soundpool-compat'
+
+    publishedGroupId = 'kr.co.smartstudy'
+    libraryName = 'SoundPoolCompat'
+    artifact = 'soundpool-compat'
+
+    libraryDescription = 'Android SoundPoolCompat Library using OpenSLES'
+
+    siteUrl = 'https://github.com/barikang/SoundPoolCompat'
+    gitUrl = 'https://github.com/barikang/SoundPoolCompat.git'
+
+    libraryVersion = '0.1.2'
+
+    developerId = 'barikang'
+    developerName = 'Jaehun Ha'
+    developerEmail = 'barikang@gmail.com'
+
+    licenseName = 'The MIT License (MIT)'
+    licenseUrl = 'http://opensource.org/licenses/mit-license.php'
+    allLicenses = ["MIT"]
+}
+
 
 android {
     compileSdkVersion 23
@@ -10,7 +35,7 @@ android {
         minSdkVersion 8
         targetSdkVersion 23
         versionCode 1
-        versionName "1.0"
+        versionName libraryVersion
     }
     buildTypes {
         release {
@@ -29,7 +54,6 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.1'
 }
 
 
@@ -78,3 +102,6 @@ task "cleanNative_${project.name}"(group: 'ndk') <<  {
         args getNDKBuildArguments(true)
     }
 }
+
+apply from: 'bintrayv1.gradle'
+apply from: 'installv1.gradle'
