--- a/libsoundpoolcompat/bintrayv1.gradle
+++ b/libsoundpoolcompat/bintrayv1.gradle
@@ -44,9 +44,8 @@ bintray {
         version {
             desc = libraryDescription
             gpg {
-                sign = true //Determines whether to GPG sign the files. The default is false
+                sign = true
                 passphrase = properties.getProperty("bintray.gpg.password")
-                //Optional. The passphrase for GPG signing'
             }
         }
     }}
