--- a/libsoundpoolcompat/build.gradle
+++ b/libsoundpoolcompat/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'com.github.dcendents.android-maven'
 apply plugin: "com.jfrog.bintray"
 
 group = 'kr.co.smartstudy'
-version = '0.1.9'
+version = '0.2.0'
 
 
 android {
@@ -117,6 +117,7 @@ install {
                 packaging 'aar'
                 name libraryName
                 description = libraryDescription
+                url siteUrl
 
                 licenses {
                     license {
